# Python_web-main

./: .gitignore
EX-08/: Pipfile  connection.py  main.py  requests.py  test_requests.py
EX-09/: pyproject.toml
EX-09-poetry/: pyproject.toml
EX-09/poetry-personal-assistant/: Dockerfile  app.py
EX-09/poetry-personal-assistant/poetry_personal_assistant/: classes.py  sorter.py
HW_14_Scraping/: Pipfile  main.py
Homework_1/: homework1_1.py  homework1_2.py
Homework_10/: create_data.py  lru_cash.py  lru_cash_2.py  main.py  models.py  mongo_client.py  redis_client.py  redis_full_test_search.py  redis_get.py  styles.py  view.py
Homework_10/Lru_test/: lru_test.py  redis_client.py  redis_full_test_search.py  redis_get.py
Homework_11_Flask/: config.py  pyproject.toml
Homework_11_Flask/config/: config.py
Homework_11_Flask/data/: app.db.sqlite3  contact.sql
Homework_11_Flask/migrations/versions/: 9d48c0d4140a_initial_migration.py  d97793a4e226_initial_migration.py
Homework_11_Flask/personal_app/: __init__.py  models.py
Homework_11_Flask/personal_app/repository/: contacts.py  users.py
Homework_11_Flask/personal_app/routes/: auth.py  contacts.py
Homework_11_Flask/personal_app/static/: login.css  style.css
Homework_11_Flask/personal_app/templates/: base.html  layout.html
Homework_11_Flask/personal_app/templates/auth/: login-template.html  login.html
Homework_11_Flask/personal_app/templates/contacts/: contacts.html
Homework_11_Flask/src/: __init__.py  models.py
Homework_11_Flask/src/repository/: contacts.py  users.py
Homework_11_Flask/src/routes/: auth.py  contacts.py
Homework_11_Flask/src/templates/: base.html
Homework_11_Flask/src/templates/contacts/: contacts.html
Homework_13_Django/: pyproject.toml
Homework_13_Django/myFinance/myFinance/: settings.py  urls.py
Homework_13_Django/myFinance/myFinanceApp/: apps.py  views.py
Homework_13_Django/myFinance/myFinanceApp/migrations/: 0001_initial.py  0002_rename_category_id_expense_category_and_more.py
Homework_13_Django_tailwind/my_finance/money_manager/: admin.py  forms.py  models.py  urls.py  views.py
Homework_13_Django_tailwind/my_finance/my_finance/: settings.py  urls.py
Homework_14/: main.py  pyproject.toml
Homework_14/news_aggregator/: news.csv  news.json  sql_news.db
Homework_14/news_aggregator/news_aggregator/: db_config.py  items.py  middlewares.py  models.py  pipelines.py  settings.py
Homework_14/news_aggregator/news_aggregator/spiders/: news.py
Homework_2/: Personal_Assistant Diagram.drawio.xml  main.py
Homework_3/poetry-personal-assistant/: pyproject.toml
Homework_3/poetry-personal-assistant/poetry_personal_assistant/: styles.py  view.py
Homework_3/poetry-personal-assistant/tests/: test_poetry_personal_assistant.py
Homework_4/: main.py  parser.py
Homework_5/: factorize_proccess.py  factorize_sync.py
Homework_6/: main.py  normalize.py  parser.py
Homework_7/: client_2.py  server.py
(+12 files in other folders)
