[tool.poetry]
name = "ex-09"
version = "0.1.0"
description = ""
authors = ["Olena Boldysheva <adv55577@gmail.com>"]
readme = "README.md"
packages = [{include = "ex_09"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
