[tool.poetry]
name = "homework-11-flask"
version = "0.1.0"
description = ""
authors = ["Olena Boldysheva <adv55577@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_11_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
bcrypt = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
