[tool.poetry]
name = "homework-13-django"
version = "0.1.0"
description = ""
authors = ["Olena Boldysheva <adv55577@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_13_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
