[tool.poetry]
name = "homework-14"
version = "0.1.0"
description = ""
authors = ["Olena Boldysheva <adv55577@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_14"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
SQLAlchemy = "^1.4.42"
Scrapy = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
