[tool.poetry]
name = "poetry-personal-assistant"
version = "0.1.0"
description = ""
authors = ["Aleksandra0001 <104300297+Aleksandra0001@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.3.0"
termcolor2 = "^0.0.3"
setuptools = "^63.2.0"
pick = "1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:main"